Add remaining buttons

--- a/index.html
+++ b/index.html
@@ -19,12 +19,28 @@
                 <p>0.123515</p>
             </div>
             <div id="usageFrame">
+                <button id="clear">%</button>
                 <button id="clear">C</button>
                 <button id="clearEntry">CE</button>
                 <button id="delete">DEL</button>
             </div>
             <div id="operationsFrame">
-
+                <button id="btnSeven">7</button>
+                <button id="btnEight">8</button>
+                <button id="btnNine">9</button>
+                <button id="btnMultiply">×</button>
+                <button id="btnFour">4</button>
+                <button id="btnFive">5</button>
+                <button id="btnSix">6</button>
+                <button id="btnSubtract">−</button>
+                <button id="btnOne">1</button>
+                <button id="btnTwo">2</button>
+                <button id="btnThree">3</button>
+                <button id="btnAdd">+</button>
+                <button id="btnSign">±</button>
+                <button id="btnZero">0</button>
+                <button id="btnDot">.</button>
+                <button id="btnEquals">=</button>
             </div>
         </div>
     </main>
