--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div id="calculatorFrame">
             <div id="answerFrame">
-                <p>0.123515</p>
+                <p>0</p>
             </div>
             <div id="usageFrame">
                 <button id="clear">%</button>
@@ -25,20 +25,20 @@
                 <button id="delete">DEL</button>
             </div>
             <div id="operationsFrame">
-                <button id="btnSeven">7</button>
-                <button id="btnEight">8</button>
-                <button id="btnNine">9</button>
+                <button id="btn7">7</button>
+                <button id="btn8">8</button>
+                <button id="btn9">9</button>
                 <button id="btnMultiply">×</button>
-                <button id="btnFour">4</button>
-                <button id="btnFive">5</button>
-                <button id="btnSix">6</button>
+                <button id="btn4">4</button>
+                <button id="btn5">5</button>
+                <button id="btn6">6</button>
                 <button id="btnSubtract">−</button>
-                <button id="btnOne">1</button>
-                <button id="btnTwo">2</button>
-                <button id="btnThree">3</button>
+                <button id="btn1">1</button>
+                <button id="btn2">2</button>
+                <button id="btn3">3</button>
                 <button id="btnAdd">+</button>
                 <button id="btnSign">±</button>
-                <button id="btnZero">0</button>
+                <button id="btn0">0</button>
                 <button id="btnDot">.</button>
                 <button id="btnEquals">=</button>
             </div>
