Add addition functionality to calculator

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>0</p>
             </div>
             <div id="usageFrame">
-                <button id="clear">%</button>
+                <button id="btnModulus">%</button>
                 <button id="clear">C</button>
                 <button id="clearEntry">CE</button>
                 <button id="delete">DEL</button>
