Prevent consecutive operator presses

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
                 <p>0</p>
             </div>
             <div id="usageFrame">
-                <button id="btnModulus">%</button>
+                <button id="btnPercent">%</button>
                 <button id="clear">C</button>
                 <button id="clearEntry">CE</button>
                 <button id="delete">DEL</button>
             </div>
             <div id="operationsFrame">
+                <button id="btnSqrt">√</button>
+                <button id="btnSquared">x²</button>
+                <button id="btnLog">log</button>
+                <button id="btnDivide">÷</button>
                 <button id="btn7">7</button>
                 <button id="btn8">8</button>
                 <button id="btn9">9</button>
