Add remaining calculator functionality

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <button id="delete">DEL</button>
             </div>
             <div id="operationsFrame">
-                <button id="btnSqrt">√</button>
-                <button id="btnSquared">x²</button>
+                <button id="btnRoot">√</button>
+                <button id="btnSquare">x²</button>
                 <button id="btnLog">log</button>
                 <button id="btnDivide">÷</button>
                 <button id="btn7">7</button>
